
syntax = "proto3";

package iyfc.msg;

import "google/protobuf/any.proto";

message KnownType {
    google.protobuf.Any contents = 1;
    string creator = 2;
}
